Resolves Defect #7
Closes #4 

Replace the Deprecated use of Double with a .valueOf comparison for the pricings